[package]
name = "scraper"
version = "0.1.0"
authors = ["Makoto Kinoshita <mkinoshi12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.13.0"
tokio = { version = "0.2", features = ["full"] }
structopt = "0.2.10"
regex = "1"
lazy_static = "1.4.0"
serde-value = "0.6.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0.51"
reqwest = "0.10.4"
tera = "1"
diesel = { version = "1.4.6", features = ["postgres", "uuid"] }
dotenv = "0.15.0"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
tempfile = "3.1.0"
webdriver = "0.40.2"
